@@ -1,12 +1,5 @@
 package com.ecyrd.jspwiki.auth;
 
-import java.security.acl.Group;
-import java.security.Principal;
-
-import java.util.Vector;
-import java.util.Enumeration;
-import java.util.Iterator;
-
 /**
  *  If a proper group/user cannot be located, then we use this
  *  class.
