@@ -21,11 +21,6 @@ package com.ecyrd.jspwiki.providers;
 
 import java.io.*;
 import java.util.Properties;
-import java.util.Collection;
-import java.util.Date;
-import java.util.TreeSet;
-import java.util.ArrayList;
-import java.util.List;
 import org.apache.log4j.Category;
 
 import com.ecyrd.jspwiki.*;
